Was added delete favorite posts from plugin

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+//Стили для пользовательской части (не админки)
 p.mm-favorites-link a{
 	text-decoration: underline;
 	text-decoration-style: dotted;
